# AI-Token-Calculator-API

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.example  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py  pricing.json  pricing_loader.py  schemas.py
app/routers/: admin.py  estimate.py  health.py  models.py
app/services/: estimator.py
app/tokenizers/: __init__.py  anthropic_approx.py  base.py  llama_bpe_approx.py  openai_tiktoken.py
tests/: test_estimate.py  test_pricing.py  test_tokenizers.py
